# HAQC

./: .gitignore  .travis.yml  Apptainer.def  LICENSE  Pipfile  README.md  SingularityFile.def  maxcut_qaoa.py  maxcut_qaoa_initialisation_techniques.py  maxcut_qaoa_layers_vanilla.py  maxcut_qaoa_optimisers.py  maxcut_vqe.py  parameter-fixing-simple-instances.py  pyproject.toml  requirements.txt  rqaoa_main.py  run_maxcut_classical_optimizer_comparison.py  run_maxcut_isa.py  run_maxcut_num_layers.py  run_maxcut_parameter_initialisation.py  setup.py
.github/: pull_request_template.md
app/: server.py
config/: mlflow_config.json
data/: instanceType_complete_numNodes_5_numVehicles_2_0864fc83fcbe4ce2871ed60399ef30de.json  instanceType_complete_numNodes_5_numVehicles_2_0b3a5bf8f93d4c419767e2126f584fa5.json  instanceType_complete_numNodes_5_numVehicles_2_17ae226e57094e919fe5e08f9786878e.json  instanceType_complete_numNodes_5_numVehicles_2_1963a54e0f4548598660dd143098a7df.json  instanceType_complete_numNodes_5_numVehicles_2_2fadee002194470aa98f143ec005593c.json  instanceType_complete_numNodes_5_numVehicles_2_302216485b684bc296e939dfe980b45d.json  instanceType_complete_numNodes_5_numVehicles_2_358f6d8c8bf64043ae7e782736f7f81c.json  instanceType_complete_numNodes_5_numVehicles_2_393662de06dd441197e66d73aded33f6.json  instanceType_complete_numNodes_5_numVehicles_2_3ff1092135b841d7b4352d98615349c3.json  instanceType_complete_numNodes_5_numVehicles_2_4ceca9cce5ff4772ae405962f26887a0.json  instanceType_complete_numNodes_5_numVehicles_2_5168e234869344d19c5483d4e8a481b5.json  instanceType_complete_numNodes_5_numVehicles_2_51c38302e66f4752849f31f54358ae7f.json  instanceType_complete_numNodes_5_numVehicles_2_62ae4c4194ea4b65bdf124c4785bdb40.json  instanceType_complete_numNodes_5_numVehicles_2_69ddb498f7b448bd9f0f324ac73abd3a.json  instanceType_complete_numNodes_5_numVehicles_2_6f0f1be2279747b28522d49f031d7d47.json  instanceType_complete_numNodes_5_numVehicles_2_7d4b99c7e4b740f2bdcd32ee155b0334.json  instanceType_complete_numNodes_5_numVehicles_2_8a9c83fb895a48b195dfae0cec0b321d.json  instanceType_complete_numNodes_5_numVehicles_2_8d151767c3374446b4e6099ee5eb43a6.json  instanceType_complete_numNodes_5_numVehicles_2_8d3571c8fbbe4b8abec8fbff42239a78.json  (+342 more)
notebooks/: 16-filtering-vqe.ipynb  (+35 more)
(+107 files in other folders)
