[project]
name = "qaoa_vrp"
version = "0.0.1"
authors = [
  { name="Vivek Kaital", email="vivekkatial@gmail.com" },
]
description = "VQE MAXCUT and other OR problems with Quantum"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"