[tool.poetry]
name = "HAQC"
version = "0.1.0"
description = "A Heuristic Algorithm Framework for Quantum Algorithms"
readme = "README.md"
authors = ["Vivek Katial <vivekkatial@gmail.com>"]
packages = [
    { include = "haqc", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
black = "22.10.0"
boto3 = "1.24.91"
botocore = "1.27.91"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
iniconfig = "1.1.1"
ipykernel = "6.16.0"
ipython = "8.4.0"
ipywidgets = "8.0.2"
itsdangerous = "2.1.2"
jedi = "0.18.1"
Jinja2 = "3.1.2"
jmespath = "1.0.1"
jupyter-client = "7.4.2"
jupyter-console = "6.0.0"
jupyter-core = "4.11.1"
jupyterlab-widgets = "3.0.3"
kiwisolver = "1.4.4"
Mako = "1.2.3"
MarkupSafe = "2.1.1"
matplotlib = "3.6.1"
matplotlib-inline = "0.1.6"
mlflow = "2.9.2"
networkx = "2.8.7"
numpy = "1.23.4"
oauthlib = "3.2.1"
packaging = "21.3"
pandas = "1.5.0"
parso = "0.8.3"
pytest = "7.1.3"
python-dateutil = "2.8.2"
python-louvain = "0.16"
pytz = "2022.4"
PyYAML = "6.0.1"
pyzmq = "24.0.1"
qiskit = "0.39.0"
qiskit-aer = "0.11.0"
qiskit-ibmq-provider = "0.19.2"
qiskit-optimization = "0.4.0"
qiskit-terra = "0.22.0"
querystring-parser = "1.2.4"
requests = "2.28.1"
requests_ntlm = "1.1.0"
retworkx = "0.12.0"
rustworkx = "0.12.0"
s3transfer = "0.6.0"
scipy = ">=1.5.0,<1.11.0"
seaborn = "0.12.0"
six = "1.16.0"
smmap = "5.0.0"
SQLAlchemy = "1.4.42"
sympy = "1.11.1"
pylatexenc = "^2.10"
plotly = "^5.18.0"
nbformat = "^5.9.2"
tqdm = "^4.66.1"
pynauty = "^2.8.6"
jupyter = "^1.0.0"
build = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
